--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "autoprefixer": "^10.4.13",
     "eslint": "^8.34.0",
     "postcss": "^8.4.21",
+    "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.4",
     "tailwindcss": "^3.2.6"
   }
 }
