--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 RESEND_API_KEY=re_dra4T81j_LD6nJdUbsheWAxXe4x4Kic4A
+
+NEXT_PUBLIC_RECAPTCHA_KEY=6Lctf_ApAAAAABgHCpvNp7VqgmSSaTvrcwdw1DH_
+
+RECAPTCHA_SECRET_KEY=6Lctf_ApAAAAAK1ZsfaraZXVANUe9Gx5PzgAve0B
