--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "^14.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-rough-notation": "^1.0.3",
     "resend": "^3.3.0",
     "tailwind-merge": "^1.14.0",
