--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "next": "^14.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dom-confetti": "^0.2.0",
     "react-google-recaptcha-v3": "^1.10.1",
-    "react-rough-notation": "^1.0.3",
     "resend": "^3.3.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
