--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dom-confetti": "^0.2.0",
+    "react-ga4": "^2.1.0",
     "react-google-recaptcha-v3": "^1.10.1",
     "resend": "^3.3.0",
     "tailwind-merge": "^1.14.0",
