--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "startVPS": "PORT=5002 next start"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.0.1",
